# engram

./: .env.example  .gitignore  CLAUDE.md  COMPLETION_GUIDE.md  DESIGN_BRIEF.md  LICENSE  PRODUCT_PHILOSOPHY.md  README.md  pyproject.toml  status.md
.claude/: settings.local.json
.omc/: project-memory.json
DB_Builder/: .env.example  .gitignore  pyproject.toml
backend/: config.py  main.py
dbbuilder/: .env.example  README.txt  _debug_import_time.py  _debug_small.py  install.bat  pyproject.toml
dbbuilder/.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
dbbuilder/config/: models.json
dbbuilder/docs/: db-builder-spec.md
dbbuilder/src/db_builder/: __init__.py  __main__.py  app.py  config.py  database.py  enrichment.py  filetype.py  pipeline.py
dbbuilder/src/db_builder/chunking/: base.py
dbbuilder/src/db_builder/embedding/: client.py  embedder.py
dbbuilder/src/db_builder/store/: chromadb_writer.py
dbbuilder/src/db_builder/ui/: build_panel.py  file_panel.py  main_window.py  output_panel.py  settings_dialog.py  theme.py
dbbuilder/tests/: conftest.py  test_chromadb_writer.py  test_config.py  test_database.py  test_embedder.py  test_embedding_client.py  test_parsers_base.py  test_pipeline.py
docs/: dedup-policy.md  implementation-plan-phase0a.md  scaffolding-plan-phase3-sync.md  scaffolding-plan-v3.md  status.md  windows-build-status.md
frontend/: index.html  package-lock.json  package.json
scripts/: bootstrap.py  build_windows.bat  dreaming_cron.py  e2e_test.py  engram-setup.iss  harsh_smoke_test.py  make_installer.bat  run_server.py
sync_server/: main.py
tests/: conftest.py  test_api_clients.py  test_api_endpoints.py  test_auto_ingester.py  test_base_agent.py  test_bottleneck_fixes.py  test_case_close.py  test_case_feedback.py  test_case_recorder.py  test_chunk_endpoint.py  test_config.py  test_contribution_validator.py  test_database.py  test_dedup.py  test_dreaming.py  test_dreaming_scheduler.py  test_embedding_client.py  test_embedding_function.py  test_graph.py  test_integration.py  test_integration_cross_project.py  test_knowledge_api.py  test_knowledge_graph.py  test_knowledge_health.py  test_llm_client.py  test_new_endpoints.py  test_orchestrator.py  test_orchestrator_edge_cases.py  test_orchestrator_parallel.py  test_session_preloader.py  (+8 more)
(+104 files in other folders)
